--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "simple_calculator",
-  "version": "1.0.0",
+  "name": "aizaz_simple_calculator",
+  "version": "1.4.0",
   "description": "Used to solve simple maths Sums",
-  "main": "index.js",
+  "main": "calculator.js",
   "type": "module",
+  "bin": "calculator.js",  
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
